--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/node": "^24.2.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.9.2",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "path": "^0.12.7",
+        "url": "^0.11.4"
     }
 }
