--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "lint": "eslint resources/ts/**/*.ts"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
         "@types/node": "^24.2.0",
         "concurrently": "^9.0.1",
+        "eslint": "^9.32.0",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.9.2",
+        "typescript-eslint": "^8.39.0",
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "path": "^0.12.7",
-        "url": "^0.11.4"
+        "path": "^0.12.7"
     }
 }
