--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^24.2.0",
+        "@typescript-eslint/eslint-plugin": "^8.39.0",
+        "@typescript-eslint/parser": "^8.39.0",
         "concurrently": "^9.0.1",
         "eslint": "^9.32.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "laravel-vite-plugin": "^2.0.0",
+        "prettier": "^3.6.2",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.9.2",
         "typescript-eslint": "^8.39.0",
