--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
+        "area17/twill": "^3.4",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
